sync repositories - add Jenkinsfile, galaxy naming

--- a/templates/systemd-scumblr.service.j2
+++ b/templates/systemd-scumblr.service.j2
@@ -9,7 +9,10 @@ User={{ scumblr_rails_user }}
 Group={{ scumblr_rails_user }}
 WorkingDirectory={{ scumblr_root }}
 #ExecStart=/usr/bin/bash -lc 'bundle exec rails server -e {{ scumblr_rails_env }} --bind 0.0.0.0 --port 80'
-ExecStart=/usr/bin/bash -lc 'bundle exec rails server -e {{ scumblr_rails_env }}'
+ExecStart=/bin/bash -lc 'bundle exec rails server -e {{ scumblr_rails_env }}'
+ExecStartPre=/bin/bash --login -c 'env > /tmp/.magic-environment-file'
+EnvironmentFile=-/tmp/.magic-environment-file
+UMask=0077
 TimeoutSec=30
 RestartSec=15s
 Restart=always
