--- a/templates/systemd-sidekiq.service.j2
+++ b/templates/systemd-sidekiq.service.j2
@@ -25,6 +25,7 @@ RestartSec=15s
 Restart=on-failure
 Environment="RAILS_ENV={{ scumblr_rails_env }}"
 SyslogIdentifier=sidekiq
+PrivateTmp=true
  
 [Install]
 WantedBy=multi-user.target
