ansible_managed tag for templates, formatting

--- a/templates/database.yml.j2
+++ b/templates/database.yml.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 ## /var/Scumblr/config/database.yml
 ## http://edgeguides.rubyonrails.org/configuring.html#configuring-a-database
 
