--- a/templates/systemd-sidekiq.service.j2
+++ b/templates/systemd-sidekiq.service.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 ## https://github.com/gitlabhq/gitlab-recipes/blob/master/init/systemd/gitlab-sidekiq.service
 ## https://github.com/mperham/sidekiq/blob/master/examples/systemd/sidekiq.service
 [Unit]
