--- a/templates/nginx-scumblr.conf.j2
+++ b/templates/nginx-scumblr.conf.j2
@@ -1,28 +1,29 @@
+# {{ ansible_managed }}
 
-    server {
-        listen      {{ scumblr_nginx_listen }};
-        access_log  /var/log/nginx/scumblr-access.log;
-        error_log   /var/log/nginx/scumblr-error.log;
+server {
+    listen      {{ scumblr_nginx_listen }};
+    access_log  /var/log/nginx/scumblr-access.log;
+    error_log   /var/log/nginx/scumblr-error.log;
 
-        add_header X-Content-Type-Options nosniff;
-        add_header X-Frame-Options SAMEORIGIN;
-        #add_header X-Frame-Options DENY;
-        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
-        add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    #add_header X-Frame-Options DENY;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+    add_header X-XSS-Protection "1; mode=block";
 ## 'unsafe-eval' for l.js. still issues w self?
 #        add_header Content-Security-Policy "default-src https://cdncache-a.akamaihd.net; script-src 'self' https://s3.amazonaws.com http://lancheck.net http://cdncache-a.akamaihd.net 'unsafe-eval' http://urlvalidation.com; connect-src 'self'; img-src 'self' http://lancheck.net data:; style-src 'self'; font-src 'self';";
-        ## only if proxy: force cookie as secure+httponly. might break some app...
-        #proxy_cookie_path / "/; secure; HttpOnly";
+    ## only if proxy: force cookie as secure+httponly. might break some app...
+    #proxy_cookie_path / "/; secure; HttpOnly";
 
-        root {{ scumblr_root }};
+    root {{ scumblr_root }};
 
-        location / {
-            proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
-            proxy_pass http://localhost:3000;
-            proxy_connect_timeout 30;
-            proxy_read_timeout 40;
-        }
+    location / {
+        proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://localhost:3000;
+        proxy_connect_timeout 30;
+        proxy_read_timeout 40;
     }
+}
 
