review ansible_managed

--- a/templates/database.yml.j2
+++ b/templates/database.yml.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 ## /var/Scumblr/config/database.yml
 ## http://edgeguides.rubyonrails.org/configuring.html#configuring-a-database
 
