--- a/templates/restore-scumblr.sh.j2
+++ b/templates/restore-scumblr.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 ## restore script for scumblr
 
 export PATH=/usr/sbin:/usr/bin:/sbin:/bin
