--- a/templates/systemd-sidekiq.service.j2
+++ b/templates/systemd-sidekiq.service.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 ## https://github.com/gitlabhq/gitlab-recipes/blob/master/init/systemd/gitlab-sidekiq.service
 ## https://github.com/mperham/sidekiq/blob/master/examples/systemd/sidekiq.service
 [Unit]
